// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PowerColumn does not render table menu if onToggleMenu not provided 1`] = `
<div
  class="p-double-row--with-icon"
>
  <div
    class="p-double-row__icon"
    data-testid="icon"
  >
    <span>
      <span>
        <i
          aria-label="on"
          class="p-icon--power-on"
        />
      </span>
    </span>
  </div>
  <div
    class="p-double-row__rows-container"
  >
    <div
      class="p-double-row__primary-row"
    >
      <div
        class="p-double-row__primary-row-text u-truncate"
        data-testid="primary"
        title="on"
      >
        <div
          class="u-upper-case--first u-truncate"
          data-testid="power_state"
        >
          on
        </div>
      </div>
    </div>
    <div
      class="p-double-row__secondary-row u-truncate"
      data-testid="secondary"
      title="virsh"
    >
      <div
        class="u-upper-case--first"
        data-testid="power_type"
        title="virsh"
      >
        virsh
      </div>
    </div>
  </div>
</div>
`;

exports[`PowerColumn renders correctly 1`] = `
<div
  class="p-double-row--with-icon"
>
  <div
    class="p-double-row__icon"
    data-testid="icon"
  >
    <span>
      <span>
        <i
          aria-label="on"
          class="p-icon--power-on"
        />
      </span>
    </span>
  </div>
  <div
    class="p-double-row__rows-container"
  >
    <div
      class="p-double-row__primary-row"
    >
      <div
        class="p-double-row__primary-row-text u-truncate"
        data-testid="primary"
        title="on"
      >
        <div
          class="u-upper-case--first u-truncate"
          data-testid="power_state"
        >
          on
        </div>
      </div>
      <span
        class="p-table-menu p-table-menu--hasIcon p-contextual-menu p-contextual-menu--left"
        style="position: relative;"
      >
        <button
          aria-controls="mock-nanoid-2"
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Take action:"
          aria-pressed="false"
          class="p-button--base has-icon p-contextual-menu__toggle u-no-margin--bottom p-table-menu__toggle"
          type="button"
        >
          <i
            class="p-icon--chevron-down p-contextual-menu__indicator"
          />
        </button>
      </span>
    </div>
    <div
      class="p-double-row__secondary-row u-truncate"
      data-testid="secondary"
      title="virsh"
    >
      <div
        class="u-upper-case--first"
        data-testid="power_type"
        title="virsh"
      >
        virsh
      </div>
    </div>
  </div>
</div>
`;
